# bloat-buster

./: .gitignore  CMakeLists.txt  build.bat  build.c  build.sh  build.zig  common.sh  generate.py  generate.sh  project.sh  run.py  self_hosted_build.sh  self_hosted_generate.sh
.gitea/workflows/: ci.yml  main.yml  pr.yml
.github/workflows/: ci.yml  main.yml  pr.yml  pr_github.yml
bootstrap/bloat-buster/: bb.c  bb_core.c  main.c
bootstrap/include/std/: base.h  font_provider.h  render.h  ui_core.h  window.h
bootstrap/shaders/: font.frag  font.vert  rect.frag  rect.h  rect.inc  rect.vert
bootstrap/std/: base.c  base.h  cocoa_windowing.c  cocoa_windowing.h  entry_point.c  entry_point.h  font_provider.c  font_provider.h  format.c  format.h  image_loader.c  md5.c  metal_rendering.c  metal_rendering.h  os.c  os.h  project.h  render.h  renderer_vulkan.c  rendering.c  rendering.h  shader_compilation.c  string.c  string.h  ui_builder.c  ui_builder.h  ui_core.c  ui_core.h  virtual_buffer.c  virtual_buffer.h  vulkan_rendering.c  vulkan_rendering.h  win32_windowing.c  win32_windowing.h  window.c  windowing.c  windowing.h  x11_windowing.c  x11_windowing.h
bootstrap/std/shaders/: rect.frag  rect.inc  rect.vert
ci/: install.sh  release.sh  release_locally.sh  reproduce.sh
dependencies/stb/: stb_truetype.h
src/: LLVM.zig  abi.c  abi_aarch64.c  abi_system_v.c  abi_win64.c  analysis.c  analysis.h  bootstrap.zig  c_abi.c  compiler.bbb  compiler.c  compiler.cpp  compiler.h  compiler.hpp  converter.zig  converter_test.zig  emitter.cpp  entry_point.cpp  lexer.c  lexer.cpp  lexer.h  lib.c  lib.cpp  lib.h  lib.hpp  lib.zig  lib_test.zig  llvm.cpp  llvm.hpp  llvm_api.zig  llvm_common.c  llvm_common.h  llvm_emit.c  llvm_emit.h  llvm_generate.c  llvm_generate.h  llvm_link.c  llvm_link.h  llvm_optimize.c  llvm_optimize.h  (+7 more)
tests/: abi_enum_bool.bbb  argv.bbb  assignment_operators.bbb  basic_array.bbb  basic_bool_call.bbb  basic_branch.bbb  basic_call.bbb  basic_enum.bbb  basic_macro.bbb  basic_pointer.bbb  basic_shortcircuiting_if.bbb  basic_slice.bbb  basic_string.bbb  basic_struct_passing.bbb  basic_switch.bbb  basic_union.bbb  basic_varargs.bbb  basic_while.bbb  bits.bbb  bits_no_backing_type.bbb  bits_return_u1.bbb  bits_zero.bbb  bool_array.bbb  bool_pair.bbb  break_continue.bbb  byte_size.bbb  c_abi.bbb  c_abi.c  c_abi0.bbb  c_abi1.bbb  c_function_pointer.bbb  c_med_struct_ints.bbb  c_ret_struct_array.bbb  c_split_struct_ints.bbb  c_string_to_slice.bbb  c_struct_with_array.bbb  comments.bbb  comparison.bbb  concat_logical_or.bbb  constant_add.bbb  (+86 more)
